--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
              <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
              <script src="https://www.w3schools.com/lib/w3.js"></script>
              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+             <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-win8.css">
+             <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2021.css">
             <title>Conference Planning Solutions</title>
 
         
@@ -19,7 +20,7 @@
 <!--NAVBAR-->
 
 
-<nav class=" w3-xlarge w3-top w3-bar w3-black w3-mobile">
+<nav class=" w3-large w3-top w3-bar w3-black w3-mobile">
 
 
   
@@ -45,17 +46,17 @@
 </h1>
 
 <!-- About -->
-<div id="about" class="w3-container w3-padding-32 about card">
-  <div class="card-body">
+<div id="about" class="w3-container  about-card w3-center">
+  <div class="card-body w3-hover-shadow">
 
-
+<div class="card-background-large  w3-win8-steel"></div>
     <h4 class="w3-center w3-text-white w3-center"><b>One of the key elements to having a successful conference is securing the perfect venue to host it.</b>
     </h4>
     <p class="w3-text-white w3-center">We’re Certified Meeting Professionals with 18 + years of Venue Sourcing experience. who have relationships and access to hundreds of venues nationally and in over 50 countries.  With our extensive experience in creating innovative and engaging experiences, we specialize in finding the perfect venue for clients' meetings and conferences that meet their specific needs while saving them time and effort.</p>
   
     <p class="w3-text-white w3-center">We understand that planning these particular events can be overwhelming and time-consuming, and requires a lot of considerations, especially when it comes to finding the right location. That's why we are here to make the process easier and stress-free. We like to show up like one of your team members to ensure that your desired outcomes are realized.</p>
 
-    <div class="button-div w3-center">
+    <div class="button-div w3-center w3-margin-bottom">
       <a href="https://www.absoluteeventsbycorrine.com" target="_blank" class=""><button class=" w3-button w3-round-large  w3-red w3-xlarge float-btn w3-center w3-bar-item w3-hover-blue">learn more about our services</button></a>
     </div>
 
@@ -66,24 +67,27 @@
 
 
 
-    <h2>Client Raves</h2>
+    <h1 class="w3-center w3-text-white raves">Client Raves</h1>
 
 <div class="testimonials-container" >
 
 
-  <div class="  w3-hover-shadow t-cards w3-center w3-margin-bottom">
-    <p>What they said</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class=" w3-hover-shadow t-cards w3-center w3-margin-bottom w3-padding-8">
+    <div class="card-background  w3-win8-steel"></div>
+    <p class="w3-text-white w3-center">What they said</p>
+    <p class="w3-text-white w3-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
 
-  <div class=" w3-hover-shadow t-cards w3-center w3-margin-bottom">
-    <p>What they said</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class=" w3-hover-shadow t-cards w3-center w3-margin-bottom w3-padding-8">
+    <div class="card-background  w3-win8-steel"></div>
+    <p class="w3-text-white w3-center">What they said</p>
+    <p class="w3-text-white w3-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
   
-  <div class=" w3-hover-shadow t-cards w3-center w3-margin-bottom">
-    <p>What they said</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class=" w3-hover-shadow t-cards w3-center w3-margin-bottom w3-padding-8">
+    <div class="card-background  w3-win8-steel"></div>
+    <p class="w3-text-white w3-center">What they said</p>
+    <p class="w3-text-white w3-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
 
 
@@ -152,9 +156,8 @@
 -->
 
         </body>
-        <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+        <footer class="w3-center w3-black w3-padding-8 ">
 
-          <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
 
 <div class="footer-bottom"> 
   
